--- a/wealthSea/app/src/main/res/values/strings.xml
+++ b/wealthSea/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">wealthSea</string>
+    <string name="entrar">Entrar</string>
+    <string name="text_cadastro">Não possui conta? Clique aqui</string>
 </resources>
